--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,8 +11,6 @@ html
     block head
   body
     block content
-    != js('vendor/jquery-1.8.0.min')
-    != js('vendor/soundmanager2')
-    != js('plugins')
-    include fonts
+    != js('vendor/app')
     block scripts
+    include fonts
