Add opengraph meta tags

--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -11,7 +11,7 @@ a, a:hover, a:visited
   color mainColor
 
 body
-  font-family Oswald, Impact, sans-serif
+  font-family Oswald, sans-serif
   background: url(../img/cc.jpg) no-repeat center center fixed
   -webkit-background-size: cover
   -moz-background-size: cover
@@ -35,7 +35,7 @@ body
     padding 0 10px
     color #fff
     background #111
-    font-family Oswald, Impact, sans-serif
+    font-family Oswald, sans-serif
     margin 20px 0
     .img
       position absolute
@@ -92,7 +92,7 @@ body
 
   a
     color #fff  
-    font-family Oswald, Impact, sans-serif
+    font-family Oswald, sans-serif
     font-size 22px
     text-decoration none
     text-transform uppercase
