--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,7 +13,7 @@ html
     meta(property="og:description", content=opengraph.description)
     != css('style')
     != js('vendor/modernizr-2.6.1.min')
-    
+    include analytics
     block head
   body
     block content
