--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -12,19 +12,19 @@ a, a:hover, a:visited
 
 body
   font-family Oswald, sans-serif
-  background: url(../img/cc.jpg) no-repeat center center fixed
-  -webkit-background-size: cover
-  -moz-background-size: cover
-  -o-background-size: cover
-  background-size: cover
+  background url(../img/cc.jpg) no-repeat center center fixed
+  -webkit-background-size cover
+  -moz-background-size cover
+  -o-background-size cover
+  background-size cover
 
 #teaser
-  margin: -70px auto 0
-  overflow: hidden
-  width: 862px
-  height: 0
-  padding-top: 862px
-  background: url(../img/teaser.png) no-repeat center center
+  margin -70px auto 0
+  overflow hidden
+  width 100%
+  height 0
+  padding-top 862px
+  background url(../img/teaser.png) no-repeat center center
 
 #lineup
   width 312px
